--- a/assets/style.css
+++ b/assets/style.css
@@ -81,7 +81,9 @@
   /* Main content styles */
   main {
     padding-top: var(--spacing-large);
-    background-image: url('../assets/images/main-background.webp');
+    background-color: #fafaf0;
+    padding-bottom: 66px;
+    
   }
   
   section {
@@ -117,12 +119,12 @@
   
   /* Footer styles */
   footer {
-    background-image: url('../assets/images/footer-image.webp');
+    background-color: #2c3e50;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     text-align: center;
-    padding: var(--spacing-medium) 0;
+    padding: 100px;
   }
   
   /* Responsive styles */
@@ -134,6 +136,7 @@
   
     .title-nav h1 {
       margin-top: var(--spacing-small);
+      
     }
   
     nav ul {
@@ -146,9 +149,22 @@
     }
   }
 
+
+
   .name-container h1 {
-    color: #ffffff;
+    color:white;
     font-size: 2.2rem;
-    margin: 0; /* Remove default margin */
+    margin: 0;
+    margin-bottom: 5px;
+    display: inline-block;
+    background-color: #000000;
+
 }
+header h2 {
+    color: #000000;
+    background-color: white;
+
+}
+
+
   
