--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 
 /* Define root variables for colors, fonts, and spacing */
 :root {
-    --primary-color: #27496d;
+    --primary-color: hsl(0, 0%, 0%);
     --accent-color: #007bff;
     --background-color: #f7f7f7;
     --text-color: #ffffff;
@@ -152,12 +152,12 @@
 
 
   .name-container h1 {
-    color:white;
+   
     font-size: 2.2rem;
     margin: 0;
     margin-bottom: 5px;
     display: inline-block;
-    background-color: #000000;
+   
 
 }
 header h2 {
@@ -165,6 +165,13 @@ header h2 {
     background-color: white;
 
 }
-
+/* Apply a background to all text within header, nav, and section */
+header h1, header h2, header p, header nav a{
+    background-color: #e2e2e2;; /* Black background */
+    color: var(--primary-color); 
+    padding: 0.2rem; /* Padding for spacing */
+    display: inline-block; /* Make the background only as wide as the text */
+    white-space: nowrap;
+}
 
   
