--- a/assets/style.css
+++ b/assets/style.css
@@ -87,11 +87,12 @@
   }
   
   section {
-    background-color: var(--text-color);
+    position: relative;;
     padding: var(--spacing-large);
     margin: var(--spacing-large) auto;
     max-width: 1100px;
     box-shadow: var(--box-shadow);
+    margin-bottom: 80px;
   }
   
   section h2 {
