--- a/assets/style.css
+++ b/assets/style.css
@@ -174,5 +174,20 @@ header h1, header h2, header p, header nav a{
     display: inline-block; /* Make the background only as wide as the text */
     white-space: nowrap;
 }
+.container > h2 {
+    position: absolute;
+    top: -49px;
+    left: 20px;
+    background: transparent;
+    padding-left: 20px;
+    color: #27496d;
+    font-size: 2.5rem;
+    border-left: 5px solid #007bff;
+    padding-left: 20px;
+    margin: 0;
+
+
+
+}
 
   
