--- a/assets/style.css
+++ b/assets/style.css
@@ -84,14 +84,13 @@
   /* Main content styles */
   main {
     padding-top: var(--spacing-large);
-    /* background-image: url('./images/main-background.webp'); */
     padding-bottom: 66px;
     background-color: #fafaf0;
 
     
     
   }
-  
+  /* Individual sections like About, Work, Contact */
   section {
     position: relative;
     padding: var(--spacing-large);
@@ -154,7 +153,7 @@
   /* Responsive styles */
   @media (max-width: 768px) {
     .header-content {
-      flex-direction: column;
+      flex-direction: column; /* Stack navigation links vertically */
       align-items: center;
     }
   
@@ -174,7 +173,7 @@
   }
 
 
-
+/* Style for the name container in the header */
   .name-container h1 {
    
     font-size: 2.2rem;
@@ -184,6 +183,7 @@
    
 
 }
+/* Header subheading styles */
 header h2 {
     color: #000000;
     background-color: white;
@@ -197,11 +197,10 @@ header h1, header h2, header p, header nav a{
     display: inline-block; /* Make the background only as wide as the text */
     white-space: nowrap;
 }
+
+/* Styling for section titles with added positioning */
 .container > h2 {
     position: absolute;
-    /* top: -49px; */
-    /* left: 20px; */
-   
     padding-left: 20px;
     color: #27496d;
     font-size: 2.5rem;
@@ -214,10 +213,10 @@ header h1, header h2, header p, header nav a{
 }
 
 
-/* Projects container */
+/* Grid layout for projects container */
 .projects-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));/* Responsive card sizing */
     gap: 1rem;
     padding: 1rem;
 }
@@ -232,23 +231,25 @@ header h1, header h2, header p, header nav a{
     cursor: pointer;
     position: relative;
 }
-
+/* Hover effect for project cards */
 .project-card:hover {
     transform: translateY(-5px); /* Slight lift effect on hover */
 }
-
+/* Project card image styling */
 .project-card img {
     width: 100%; /* Ensures the image covers the card width */
-    height: 244px; /* Maintain aspect ratio */
+    height: 244px; /* Fixed height for uniformity */
     object-fit: cover; /* Ensures the image covers the card area */
     transition: transform 0.3s ease; /* Smooth transform on hover */
 }
 
-/* Hover effect for project card */
+/* Brighten image on card hover */
 .project-card:hover img {
     filter: brightness(120%); /* Increase brightness on hover */
 }
 
+
+/* Project information styling */
 .project-info {
     padding: 1rem; /* Padding inside the project card */
     text-align: center;
@@ -276,14 +277,16 @@ header h1, header h2, header p, header nav a{
     top: 0; /* Align to the top of the container */
     bottom: 0; /* Stretch to the bottom of the container */
     width: 2px; /* Width of the line */
-    background-color: var(--primary-color); /* Color of the line, using primary color variable */
-    margin-left: -20px; /* Adjust this value based on your layout's spacing */
+    background-color: var(--primary-color); 
+    margin-left: -20px; /* Position the line outside the container to the left */
 }
 
 /* Adjust the padding of the container to make room for the line */
 .container {
     padding-left: var(--spacing-large); /* Increase left padding to accommodate the line */
 }
+
+/* Styling adjustments for section titles within containers */
 #about > h2 {
     left: -171px;
     top: -3px;
@@ -306,49 +309,40 @@ header h1, header h2, header p, header nav a{
   
 
 
-/* Existing media query for medium screens (tablets) */
+/* Media queries for responsive adjustments */
 @media (max-width: 768px) {
-    /* Your existing styles for medium screens */
-    /* Add or adjust styles as needed */
     .container {
-        max-width: 600px; /* Adjust the max-width as needed */
-        padding: var(--spacing-medium); /* Adjust padding as needed */
+        max-width: 100%; 
+        padding: var(--spacing-medium); 
     }
     
     /* Styles to stack the header content vertically */
     .header-content {
-        flex-direction: column;
-        align-items: center;
+        flex-direction: column;/* Stack elements vertically on smaller screens */
+        align-items: center;/* Center-align the elements for a clean look */
     }
 
     /* Adjust font sizes, spacing, etc. */
     h1, h2, p {
-        font-size: smaller; /* Example to reduce font size */
+        font-size: smaller; 
     }
 }
 
 /* Existing or new media query for small screens (mobiles) */
 @media (max-width: 480px) {
-    /* Your existing styles for small screens */
-    /* Add or adjust styles as needed */
     .container {
         max-width: 100%; /* Container takes the full width */
         padding: var(--spacing-small); /* Reduce padding for small screens */
     }
     
-    /* Further adjustments for header content on small screens */
-    .header-content {
-        /* Your styles for mobile header */
-    }
 
-    /* Adjust font sizes, spacing, etc. for mobile view */
     h1, h2, p {
-        font-size: even smaller; /* Example to reduce font size further */
+        font-size: even smaller; 
     }
 }
-
+/* Ensure titles within sections are displayed correctly */
 section h2 span {
-    display: block; 
+    display: block; /* Make span elements within h2 block-level for better control */
 }
 
 /* Styles for contact section */
